# Overlog

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
assets/fonts/: README.md
docs/: API.md
examples/: parse.rs  render.rs
scripts/: setup.sh
src/: error.rs  geo.rs  lib.rs  main.rs  renderer.rs  telemetry.rs  utils.rs  video.rs
src/commands/: mod.rs  parse.rs  render.rs
tests/: integration_tests.rs
