[package]
name = "overlog"
version = "0.1.0"
edition = "2021"
authors = ["makalin <makalin@example.com>"]
description = "Terminal-based tool for overlaying telemetry data onto video files"
license = "MIT"
repository = "https://github.com/makalin/overlog"
keywords = ["telemetry", "video", "gps", "ffmpeg", "overlay"]
categories = ["multimedia", "command-line-utilities"]

[dependencies]
# Core dependencies
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"

# File handling
csv = "1.3"
gpx = "0.10"
geojson = "0.24.2"
proj = "0.30"

# Image processing
image = "0.25"
plotters = "0.3"
rusttype = "0.9"
imageproc = "0.25"

# Video processing
ffmpeg-next = "7.1"

# Geographic calculations
geo = "0.30"
geodesy = "0.13.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Optional web frontend
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"], optional = true }

[dev-dependencies]
criterion = "0.6"
tempfile = "3.20"

# [[bench]]
# name = "telemetry_parsing"
# harness = false

[features]
default = []
web = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys"]
gui = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 
